--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-numpy
+streamlit
 pandas
+numpy
 scikit-learn
-xgboost
-imbalanced-learn
-matplotlib
-seaborn
 joblib
-tensorflow
-keras
-ipython
-joblib 
-pickle
 plotly
